[project]
name = "vol-greeks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dhruv", email = "Dhruvp@umass.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
